--- a/training-kfolds.ipynb
+++ b/training-kfolds.ipynb
@@ -85,7 +85,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 6598494544703301143\n",
+      "incarnation: 17187802288787944535\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
       "memory_limit: 15479566528\n",
@@ -94,7 +94,7 @@
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 4693167659672883113\n",
+      "incarnation: 11928919760620582120\n",
       "physical_device_desc: \"device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:00:04.0, compute capability: 7.0\"\n",
       "]\n",
       "GPU Available:  True\n",
@@ -279,7 +279,7 @@
    "source": [
     "# load_dir = f\"/kaggle/input/{COMPETITION_NAME}/\"\n",
     "extras_PATH = 'gs://extras-entrenamiento/'\n",
-    "datos_PATH = 'gs://ranzcr-data/'\n",
+    "datos_PATH = os.getcwd() + '/train/'#'gs://ranzcr-data/'\n",
     "df = pd.read_csv(extras_PATH + 'train_folds.csv')\n",
     "\n",
     "# paths = load_dir + \"train/\" + df['StudyInstanceUID'] + '.jpg'\n",
@@ -607,6 +607,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading data from https://github.com/Callidior/keras-applications/releases/download/efficientnet/efficientnet-b7_weights_tf_dim_ordering_tf_kernels_autoaugment_notop.h5\n",
+      "258441216/258434480 [==============================] - 2s 0us/step\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
